task2/network.tf
resource "aws_vpc" "task2-vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "vpc-task2"
  }
}

resource "aws_subnet" "task2-subnet" {
  vpc_id                  = aws_vpc.task2-vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name = "subnet-task2"
  }
}

resource "aws_internet_gateway" "task2-igw" {
  vpc_id = aws_vpc.task2-vpc.id

  tags = {
    Name = "igw-task2"
  }
}

resource "aws_route_table" "task2-rt" {
  vpc_id = aws_vpc.task2-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.task2-igw.id
  }

  tags = {
    Name = "rt-task2"
  }
}

resource "aws_route_table_association" "rt-associations" {
  subnet_id      = aws_subnet.task2-subnet.id
  route_table_id = aws_route_table.task2-rt.id
}
